--- a/naivecoin/package.json
+++ b/naivecoin/package.json
@@ -18,6 +18,10 @@
   },
   "dependencies": {
     "@types/crypto-js": "^3.1.47",
-    "crypto-js": "^4.0.0"
+    "@types/express": "^4.17.6",
+    "@types/socket.io": "^2.1.8",
+    "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
   }
 }
