--- a/naivebackend/package.json
+++ b/naivebackend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naivecoin",
+  "name": "naivebackend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,18 +10,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@types/socket.io": "^2.1.8",
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/node": "^14.0.11",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
-  },
-  "dependencies": {
-    "@types/crypto-js": "^3.1.47",
-    "@types/socket.io": "^2.1.8",
-    "@types/socket.io-client": "^1.4.33",
-    "crypto-js": "^4.0.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
   }
 }
