--- a/naivecoin/package.json
+++ b/naivecoin/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon"
+    "dev": "nodemon",
+    "build": "rimraf ./build && tsc"
   },
   "keywords": [],
   "author": "",
@@ -13,14 +14,17 @@
   "devDependencies": {
     "@types/node": "^14.0.11",
     "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   },
   "dependencies": {
     "@types/crypto-js": "^3.1.47",
+    "@types/elliptic": "^6.4.12",
     "@types/socket.io": "^2.1.8",
     "@types/socket.io-client": "^1.4.33",
     "crypto-js": "^4.0.0",
+    "elliptic": "^6.5.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   }
