--- a/naivevue/package.json
+++ b/naivevue/package.json
@@ -11,6 +11,7 @@
     "@types/crypto-js": "^3.1.47",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
