--- a/naivevue/package.json
+++ b/naivevue/package.json
@@ -12,10 +12,12 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "element-ui": "^2.13.2",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
+    "vue-socket.io-extended": "^4.0.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
