--- a/naivevue/package.json
+++ b/naivevue/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@types/crypto-js": "^3.1.47",
+    "@types/elliptic": "^6.4.12",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "element-ui": "^2.13.2",
+    "elliptic": "^6.5.2",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
